<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity"
    android:background="#E6DFE6">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textWel"
        android:text="@string/welcome"
        android:textSize="35sp"
        android:gravity="center"
        android:layout_marginBottom="25dp"/>
    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:autofillHints="username"
        android:inputType="text"
        android:id="@+id/et_username"
        android:layout_marginBottom="25dp"
        android:padding="15dp"/>
    <EditText
        android:autofillHints="password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:id="@+id/et_password"
        android:inputType="textPassword"
        android:layout_marginBottom="25dp"
        android:padding="15dp"/>
    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_number"
        android:id="@+id/et_mobNum"
        android:inputType="phone"
        android:autofillHints="phone"
        android:layout_marginBottom="25dp"
        android:padding="15dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Save"
        android:id="@+id/Sign"
        android:textStyle="bold"/>



</LinearLayout>